Fixed Spacing on Design Page

--- a/static/scss/audio-page.scss
+++ b/static/scss/audio-page.scss
@@ -35,11 +35,12 @@ h2 {
   line-height: 32px;
   padding-left: 20px;
 }
-
+.audio-sect{
+  height: 60vh;
+}
 #head-pad{
   margin-top: 50px;
   min-height: 60vh !important;
-  height: 60vh;
   padding: 0;
   iframe{
      width: 100%;
